authentication for pages

--- a/pse-dbmodell/src/main/webapp/WEB-INF/templates/default.xhtml
+++ b/pse-dbmodell/src/main/webapp/WEB-INF/templates/default.xhtml
@@ -6,7 +6,7 @@
 <h:head>
 	<title>PSE</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<link rel="stylesheet" media="all" href="css/screen.css" />
+	<link rel="stylesheet" media="all" href="/css/screen.css" />
 </h:head>
 <h:body>
 	<div id="container">
@@ -16,9 +16,7 @@
          </ui:insert>
 		</div>
 		<div id="footer">
-			<p>
-				This project is super!<br />
-			</p>
+			&copy; 2015 by SWD13
 		</div>
 	</div>
 </h:body>
