Added context for css

--- a/pse-dbmodell/src/main/webapp/WEB-INF/templates/default.xhtml
+++ b/pse-dbmodell/src/main/webapp/WEB-INF/templates/default.xhtml
@@ -7,7 +7,7 @@
 <h:head>
 	<title>PSE</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<link rel="stylesheet" media="all" href="/css/screen.css" />
+	<link rel="stylesheet" media="all" href="#{request.contextPath}/css/screen.css" />
 </h:head>
 <h:body>
 	<div id="container">
