PSE2015-21 Menu bar and dummy pages

--- a/pse-dbmodell/src/main/webapp/WEB-INF/templates/default.xhtml
+++ b/pse-dbmodell/src/main/webapp/WEB-INF/templates/default.xhtml
@@ -12,7 +12,7 @@
 <h:body>
 	<p:outputPanel id="container" deferred="true">
 		<ui:insert name="header" >
-	  		<ui:include src="/protected/UserNameTag.xhtml" />
+	  		<ui:include src="/protected/Menu.xhtml" />
 		</ui:insert>
 		<p:panel id="content">
 			<ui:insert name="content">[Template content will be inserted here]</ui:insert>
