added project specific css

--- a/pse-dbmodell/src/main/webapp/WEB-INF/templates/default.xhtml
+++ b/pse-dbmodell/src/main/webapp/WEB-INF/templates/default.xhtml
@@ -8,6 +8,7 @@
 	<title>PSE</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<link rel="stylesheet" media="all" href="#{request.contextPath}/css/theme.css" />
+	<link rel="stylesheet" media="all" href="#{request.contextPath}/css/pse.css" />
 </h:head>
 <h:body>
 	<p:layout fullPage="true">
