PSE2015-19 - Started Activity Stream on Home page So far the query only excludes expired messages - work in progress!

--- a/pse-dbmodell/src/main/webapp/css/theme.css
+++ b/pse-dbmodell/src/main/webapp/css/theme.css
@@ -1591,3 +1591,8 @@
 .ui-layout-pane-no-border {
   	border: 0;
 }
+
+.ui-datascroller .ui-datascroller-item {
+    border-bottom: 1px solid #a8a8a8;
+    padding: 25px 10px;
+}
