added center panel scroll

--- a/pse-dbmodell/src/main/webapp/WEB-INF/templates/default.xhtml
+++ b/pse-dbmodell/src/main/webapp/WEB-INF/templates/default.xhtml
@@ -18,7 +18,7 @@
 			</ui:insert>
 		</p:layoutUnit>
 	<p:layoutUnit position="center">
-		<p:panel>
+		<p:panel styleClass="centerpanel">
 			<ui:insert name="content">[Template content will be inserted here]</ui:insert>
 		</p:panel>
 	</p:layoutUnit>
