Use growl to give user feedback after creating a new message. Fixed various warnings.

--- a/pse-dbmodell/src/main/webapp/WEB-INF/templates/default.xhtml
+++ b/pse-dbmodell/src/main/webapp/WEB-INF/templates/default.xhtml
@@ -19,6 +19,8 @@
 		</p:layoutUnit>
 	<p:layoutUnit position="center">
 		<p:panel styleClass="centerpanel">
+			<!-- Default growl, to make sure all messages can get displayed -->
+			<p:growl sticky="false" showDetail="true" life="5000" />
 			<ui:insert name="content">[Template content will be inserted here]</ui:insert>
 		</p:panel>
 	</p:layoutUnit>
